# google-trends-bot

./: .gitignore  .gitmodules  PLAN.md  README.md  page3.html  pyproject.toml
.github/workflows/: weekly-trends.yml
src/trends_bot/: GoogleTrendsScraper.py  main.py  trends_client.py
