[project]
name = "google-trends-bot"
version = "0.1.0"
description = "Weekly Google Trends scraper wrapper for Discord reporting"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "lxml>=4.9.0",
  "matplotlib==3.8.4",
  "numpy==1.24.3",
  "pandas==1.5.3",
  "requests==2.32.5",
  "selenium==4.9.0",
]

[project.scripts]
trends-bot = "trends_bot.main:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trends_bot"]

[tool.uv]
package = true
