[project]
name = "google-trends-bot"
version = "0.2.0"
description = "Weekly Google Trends scraper wrapper for Discord reporting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.9.0",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "pytrends>=4.9.2",
  "requests>=2.32.0",
  "tenacity>=9.0.0",
]

[project.scripts]
trends-bot = "trends_bot.main:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trends_bot"]

[tool.uv]
package = true
